# DDS_URControl

./: .gitignore  CMakeLists.txt  DDS_test.idl  README.md  URController.idl
Matlab_URController/: CMakeLists.txt  README.md  URController.cpp  URController.h  URController_private.h  URController_types.h  buildInfo.mat  ert_main.cpp  rtwtypes.h
Matlab_URController/tlc/: SFunHelper.m  ddsUpsCommandPub.m  ddsUpsCommandPub.tlc  upslib.slx
dds/: CMakeLists.txt  URController.cxx  URController.hpp  URControllerPlugin.cxx  URControllerPlugin.hpp  URController_publisher.cxx  URController_subscriber.cxx  USER_QOS_PROFILES.xml  convert.h  writeData.hpp
dds_performance_test/: .gitignore  CMakeLists.txt  DDS_test.cxx  DDS_test.hpp  DDS_testPlugin.cxx  DDS_testPlugin.hpp  DDS_test_publisher.cxx  DDS_test_subscriber.cxx  application.hpp  test_qos_file.xml
dds_performance_test/resource/: 128b_test.txt  1M_test.txt  500kb_test.txt
dds_performance_test/ros2_humble_ws/: .gitignore
dds_performance_test/ros2_humble_ws/rostest_msgs/: CMakeLists.txt  README.md  package.xml
dds_performance_test/ros2_humble_ws/rostest_msgs/msg/: Angle.msg  DdsTestMessage.msg
dds_performance_test/ros2_humble_ws/rostest_subpub/: CMakeLists.txt  README.md  package.xml
dds_performance_test/ros2_humble_ws/rostest_subpub/include/rostest_subpub/: publisher.hpp  subscriber.hpp
dds_performance_test/ros2_humble_ws/rostest_subpub/src/: publisher.cpp  publisher_node.cpp  subscriber.cpp  subscriber_node.cpp
dds_performance_test/ros2_humble_ws/script/: run.sh
dds_performance_test/script/: DDS_test.txt  DDS_test.txt2  DDS_test.txt3  run.sh  run_computer2.sh
dds_qos/: READMD.md
dds_qos/domain/: CMakeLists.txt  einstein_domain_library.xml
dds_qos/qos/: CMakeLists.txt  einstein_custom_qos_profile_library.xml.in  einstein_domain_governance.xml.in  einstein_participant_permissions.xml.in
dds_qos/smc/: CMakeLists.txt  gui_participant_library.xml  msc_participant_library.xml  smc_participant_library.xml  tst_participant_library.xml
displaywindow/: CMakeLists.txt  README.md
displaywindow/src/: displaywindow.cpp
mouse_movement/: CMakeLists.txt  captureMouse.cpp  captureMouse.hpp
resources/cmake/: ConnextDdsAddExample.cmake
script/: code_statistics.txt  run.sh
simulink/: URController.slx  init.m  mouseMovement.m  show_results.m
simulink/bode/closed loop/: closed loop bode diagram.mat
simulink/doc/: result1_20241012.fig
simulink/lib/: forwardkinematics.slx  slblocks.m
simulink/lib/kine/InvKin_UR5/: DH.m  test_ur5InvKin.m  ur5InvKin.m
simulink/lib/kine/basic function/: ROTX.m  ROTY.m  ROTZ.m  SKEW3.m  SkewExp.m  TwistExp.m  adjoint.m  getXi.m  manipulability.m  reportError.m  safety_check.m  twistMatrixToVector.m  ur5BodyJacobian.m  ur5FwdKin.m  ur5RRcontrol.m
simulink/lib/motionGenerator/: MotionGenerator.m  profile_test.m
simulink/script/: draw_result.m
